--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:400,600,700&display=swap" rel="stylesheet">
     <title>ActiveBox</title>
-</head>
+  </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="header_bg">
-                <img class="logo" src="images/logo.png" alt="Ptoho banner">
-                <ul class="menu">
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">Our Team</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Download</a></li>
-                </ul>
-            </div>
-            <div class="offer">
-                <h1>Your favourite one page
-                    Multi purpose template
-                </h1>
-            </div>
-        </div>    
-    </header>
-</body>
+    <!-- Header -->
+  <header>
+    <div class="container">
+      <div class="header__inner">
+        <img class="logo" src="images/logo.png" alt="Ptoho banner" />
+          
+        <nav class="nav">
+            <a class="nav_link" href="#">Features</a>
+            <a class="nav_link" href="#">Works</a>
+            <a class="nav_link" href="#">Our Team</a>
+            <a class="nav_link" href="#">Testimonial</a>
+            <a class="nav_link" href="#">Download</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+    <!-- Offer -->
+        <div class="offer">
+          <div class="container">
+            <h1 class="offer__maintitle"> Your Favorite One page <br> Multi Purpose Tempalte</h1>
+            <h2 class="offer__subtitle">Lorem ipsum dolor sit amet consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</h2>
+
+          </div>
+        </div>
+      </div>
+  </body>
 </html>
