--- a/index.html
+++ b/index.html
@@ -30,8 +30,37 @@
           <div class="container">
             <h1 class="offer__maintitle"> Your Favorite One page <br> Multi Purpose Tempalte</h1>
             <h2 class="offer__subtitle">Lorem ipsum dolor sit amet consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</h2>
-
+            <a  class="btn btn--red" href="#">Find Out More</a>
           </div>
+        </div>
+      </div>
+
+      <!-- Content -->
+
+      <div class="container">
+        <div class="content">
+          <div class="content__item">
+            <img class="content__img" src="#" alt="">
+            <h4 class="content__title">Easily customized</h4>
+            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
+              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+          </div>
+
+          <div class="content__item">
+            <img class="content__img" src="#" alt="">
+            <h4 class="content__title">Easily customized</h4>
+            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
+              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+          </div>
+
+          <div class="content__item">
+            <img class="content__img" src="#" alt="">
+            <h4 class="content__title">Easily customized</h4>
+            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
+              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+          </div>
+
+          
         </div>
       </div>
   </body>
