--- a/index.html
+++ b/index.html
@@ -40,28 +40,44 @@
       <div class="container">
         <div class="content">
           <div class="content__item">
-            <img class="content__img" src="#" alt="">
+            <img class="content__img" src="/images/icn/icon_1.png" alt="">
             <h4 class="content__title">Easily customized</h4>
-            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
-              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
           </div>
 
           <div class="content__item">
-            <img class="content__img" src="#" alt="">
-            <h4 class="content__title">Easily customized</h4>
-            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
-              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+            <img class="content__img" src="/images/icn/icon_2.png" alt="">
+            <h4 class="content__title">Responsive REady</h4>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
           </div>
 
           <div class="content__item">
-            <img class="content__img" src="#" alt="">
-            <h4 class="content__title">Easily customized</h4>
-            <div class="content_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit fugiat esse facere necessitatibus harum autem, quia eligendi cumque dolorem accusantium magnam itaqu
-              e error, voluptates alias! Accusantium ipsa quisquam impedit.</div>
+            <img class="content__img" src="/images/icn/icon_3.png" alt="">
+            <h4 class="content__title">Modern Design</h4>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
           </div>
 
-          
+          <div class="content__item">
+            <img class="content__img" src="/images/icn/icon_4.png" alt="">
+            <h4 class="content__title">Easily customized</h4>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+          </div>
+
+          <div class="content__item">
+            <img class="content__img" src="/images/icn/icon_5.png" alt="">
+            <h4 class="content__title">Responsive REady</h4>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+          </div>
+
+          <div class="content__item">
+            <img class="content__img" src="/images/icn/icon_6.png" alt="">
+            <h4 class="content__title">Modern Design</h4>
+            <div class="content_info">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor </div>
+          </div>
+
         </div>
       </div>
+
+      <!-- Features -->      
   </body>
 </html>
