--- a/index.html
+++ b/index.html
@@ -78,6 +78,67 @@
         </div>
       </div>
 
-      <!-- Features -->      
+      <!-- Features -->
+
+      <div class="features">
+
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-1.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-2.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-3.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-4.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-5.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-6.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-7.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>
+        <div class="features_items">
+          <img class="features_photo" src="/images/itms/work-8.jpg">
+          <div class="main_features_item">
+            <div class="features__title">Project Name</div>
+            <div class="features__text">User Interface Design</div>
+          </div>  
+        </div>  <!-- /Features -->         
+      
+
   </body>
 </html>
